test_case/rust-lang_rust/52242_404938010.rs
none
+	LL |         Some(n) => {
+	   |              - help: consider changing this to be a mutable reference: `<make this mutable> n`
16	LL |             *n += 1; //~ ERROR cannot assign to immutable
